--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-three/rapier": "^1.4.0",
     "playroomkit": "^0.0.80",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three-stdlib": "^2.30.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
